--- a/src/css/styleCSS.css
+++ b/src/css/styleCSS.css
@@ -82,3 +82,21 @@ body {
    } */
 
    /* //TWO */
+   .demo-link {
+       font-size: 2.5rem;
+       text-decoration: none;
+       color: red;
+       display: block;
+       font-weight: bold;
+       -webkit-font-smoothing: antialiased;
+       margin-right: 1rem;
+   }
+   .demo-link::before {
+    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
+    margin-right: 1rem;
+   }
+   .demo-link::after {
+    font-family: "Font Awesome 5 Brands"; content: "\f099";
+    margin-left: 1rem;
+    color: rgb(94, 142, 248);
+   }
