--- a/src/css/styleCSS.css
+++ b/src/css/styleCSS.css
@@ -86,17 +86,47 @@ body {
        font-size: 2.5rem;
        text-decoration: none;
        color: red;
-       display: block;
+       display: inline-block;
        font-weight: bold;
        -webkit-font-smoothing: antialiased;
-       margin-right: 1rem;
+       cursor: pointer;
+       position: relative;
    }
-   .demo-link::before {
+   /* .demo-link::before {
     font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
     margin-right: 1rem;
+    color: rgb(61, 156, 245);
    }
    .demo-link::after {
-    font-family: "Font Awesome 5 Brands"; content: "\f099";
+    font-family: "Font Awesome 5 Brands"; content: "\f167";
     margin-left: 1rem;
-    color: rgb(94, 142, 248);
+   } */
+
+   .demo-link::before {
+   content: "";
+   width: 100%;
+   height: .2rem;
+   background-color: red;
+   position: absolute;
+   top: 0;
+   left: 0;
+   transform: scale(0);
+   transition: transform .5s;
+   }
+
+   .demo-link::after {
+    content: "";
+    width: 100%;
+    height: .2rem;
+    background-color: red;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: scale(0);
+    transition: transform .5s;
+   }
+
+   .demo-link:hover::before,
+   .demo-link:hover::after {
+       transform: scale(1);
    }
