--- a/src/css/styleCSS.css
+++ b/src/css/styleCSS.css
@@ -83,7 +83,7 @@ body {
    } */
 
    /* //TWO */
-    .demo-link {
+  /*   .demo-link {
        font-size: 2rem;
        text-decoration: none;
        color: white;
@@ -92,7 +92,7 @@ body {
        -webkit-font-smoothing: antialiased;
        cursor: pointer;
        position: relative;
-   } 
+   }  */
    /* .demo-link::before {
     font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
     margin-right: 1rem;
@@ -136,7 +136,7 @@ body {
    } */
 
    /* Overlays and Images */
-
+/* 
    body {
        position: relative;
        background-image: url("http://source.unsplash.com/random");
@@ -153,4 +153,12 @@ body {
        left: 0;
        position: absolute;
        z-index: -1;
-   }
+   } */
+
+  /*  grid */
+  main {
+      width: 100%;
+      height: 50rem;
+      border: 1rem solid lightblue;
+      padding: 2rem;
+  }
