--- a/src/css/styleThree.css
+++ b/src/css/styleThree.css
@@ -58,3 +58,48 @@ border: .2rem black dotted;
 #four {
   background-color: cyan;
 }  */
+/* .nav {
+    width: 100%;
+    height: 15%;
+    background-color: cadetblue;
+}
+.nav li {
+    display: inline-block;
+} */
+/* .navs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    background-color: chartreuse;
+    gap: .5rem;
+    width: 100%;
+    height: 4rem;
+} */
+/* .cont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+/* .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    background-position: center;
+    width: 10rem;
+    max-width: 10rem;
+}
+.List {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.List li {
+    font-size: 1rem;
+    text-transform: uppercase;
+} */
