--- a/src/css/responsiveWeb.css
+++ b/src/css/responsiveWeb.css
@@ -1,10 +1,21 @@
+/* //MIN-WIDTH */
+@media screen and (min-width:320px){
+
+}
+/* @media screen and (min-width:480px){
+
+} */
+@media screen and (min-width:768px){
+
+}
+ @media screen and (min-width:1024px){
+
+} 
+/* //MAX-WIDTH */
 @media screen and (max-width:1024px){
 
 }
 @media screen and (max-width:768px){
-
-}
-@media screen and (max-width:320px){
 
 }
 @media screen and (device-aspect-ratio: 16/9){
