--- a/src/css/styleMaqueta.css
+++ b/src/css/styleMaqueta.css
@@ -55,7 +55,7 @@ header  nav ul {
     margin: 1rem;
 }
 ul li a {
-    font-size: var(--font);
+    font-size: 1.2rem;
     font-weight: bold;
     color: var(--color-Two);
     cursor: pointer;
@@ -63,5 +63,20 @@ ul li a {
 ul li a:hover {
  color: var(--color-one);
 }
+a i:hover {
+    /* color: var(--color-one); */
+    background-color: #ddddddd2;
+    border-radius: 1rem;
+    padding: .5rem;
+}
+/* 
+footer {
+    width: 100%;
+    height: 10vh;
+    background-color: #cac9c9;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+} */
 
 
