--- a/src/css/styleMaqueta.css
+++ b/src/css/styleMaqueta.css
@@ -63,6 +63,35 @@ ul li a {
 ul li a:hover {
  color: var(--color-one);
 }
+/*   a::before {
+    content: "";
+    width: 100%;
+    height: .2rem;
+    background-color: red;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: right;
+    transition: transform .5s;
+   }
+  a::after {
+    content: "";
+    width: 100%;
+    height: .2rem;
+    background-color: red;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: left;
+    transition: transform .5s;
+   }
+    a:hover::before,
+    a:hover::after {
+    transform: scale(1);
+   }  */
+
 a i:hover {
     /* color: var(--color-one); */
     background-color: #ddddddd2;
