--- a/src/css/styleMaqueta.css
+++ b/src/css/styleMaqueta.css
@@ -62,7 +62,7 @@ ul li a {
 }
 ul li a:hover {
  color: #e7e7e7;
- border-bottom: .1rem solid #000000;
+ border-bottom: .2rem solid #000000;
 }
   /*   li a::before {
     content: "";
@@ -103,6 +103,32 @@ ul li a:hover {
 ul li img {
     border-radius: 2rem;
 }
+/* //main  */
+ main {
+     height: 100vh;
+     display: grid;
+     grid-template-columns:  20% 1fr 20%;
+     grid-template-rows: repeat(3, 1fr);
+     gap: .5rem;
+ }
+ .main-logo {
+     grid-column-start: 2;
+     grid-column-end: 3;
+     grid-row-start: 1;
+     grid-row-end: 2;
+ }
+ .main-input {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+ }
+ .main-buttons {
+     grid-column-start: 2;
+     grid-column-end: 3;
+     grid-row-start: 3;
+     grid-row-end: 4;
+ }
 /* 
 footer {
     width: 100%;
