--- a/src/css/styleMaqueta.css
+++ b/src/css/styleMaqueta.css
@@ -110,12 +110,24 @@ ul li img {
      grid-template-columns:  20% 1fr 20%;
      grid-template-rows: repeat(3, 1fr);
      gap: .5rem;
+     margin-top: 15rem;
  }
  .main-logo {
      grid-column-start: 2;
      grid-column-end: 3;
      grid-row-start: 1;
      grid-row-end: 2;
+ }
+ .main-logo img {
+     background-repeat: no-repeat;
+     background-size: contain;
+     background-position: center;
+     object-fit: cover;
+     width: 40rem;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin: 0 auto;
  }
  .main-input {
     grid-column-start: 2;
@@ -129,7 +141,7 @@ ul li img {
      grid-row-start: 3;
      grid-row-end: 4;
  }
-/* 
+
 footer {
     width: 100%;
     height: 10vh;
@@ -137,6 +149,6 @@ footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
-} */
+} 
 
 
