--- a/src/css/styleDiscord.css
+++ b/src/css/styleDiscord.css
@@ -253,3 +253,33 @@ body {
 .download .btn-brand {
     margin-top: 1rem;
 }
+
+/* //footer */
+
+.main-footer {
+    background-color: var(--dark-clr);
+    color: var(--off-white-clr);
+    padding: 8rem 2.4rem 6.4rem;
+}
+.main-footer .row {
+    padding: 0;
+}
+.info-box {
+    grid-column: 4;
+    margin-bottom: 5.6rem;
+}
+.footer-title {
+    color: var(--brand-clr);
+}
+.info-box .footer-title {
+    font-size: 3rem;
+}
+.languages {
+    margin: 2.4rem;
+    display: flex;
+    align-items: center;
+    font-size:1.4rem;
+}
+.languages img {
+    width: 2.4rem;
+}
