--- a/src/css/styleDiscord.css
+++ b/src/css/styleDiscord.css
@@ -134,10 +134,19 @@ body {
     font-weight: bold;
     font-style: normal;
     line-height: 120%;
+    text-align: center;
+    font-size: 4rem;
 }
 .hero-decription {
-    line-height: 3.2rem;
+    line-height: 2.5rem;
     margin-top: 2.4rem;
+    font-size: 2rem;
+    text-align: center;
+}
+.hero-btn-grow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero-btn-grow .btn-light {
     margin: 2.4rem 2.4rem 0 0;
@@ -169,6 +178,13 @@ body {
     margin-top: 2rem;
     grid-column: span 4;
 }
+.text-group h2 {
+    text-align: center;
+}
+/* .text-group p {
+    font-size: 1rem;
+    font-weight: 400;
+} */
 .secondary-title {
   font-size: var(--secondary-title-font-size);
 }
@@ -331,4 +347,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.main-footer .btn-brand {
+    line-height: 1.8;
 }
