--- a/src/css/styleDiscord.css
+++ b/src/css/styleDiscord.css
@@ -180,6 +180,8 @@ body {
 }
 .text-group h2 {
     text-align: center;
+    font-size: 3rem;
+    font-weight: bold;
 }
 /* .text-group p {
     font-size: 1rem;
@@ -191,11 +193,12 @@ body {
 .text-group p {
  margin-top: 2rem;
  line-height: 2rem;
+ font-size: 1.5rem;
 }
 
 /* voice-channel */
 .voice-channel {
-    color: var(--off-white-clr);
+    /* color: var(--off-white-clr); */
 }
 .wave {
     color: var(--off-white-clr);
