--- a/src/css/siteLanding.css
+++ b/src/css/siteLanding.css
@@ -16,6 +16,9 @@
 }
 html {
     font-size: 62.5%;
+    font-family: roboto,sans-serif;
+/*     font-weight: 400;
+    font-style: normal; */
 }
 a {
     text-decoration: none;
@@ -28,4 +31,36 @@ img {
     background-size: cover;
     background-position: center;
     object-fit: cover;
+}
+header {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+body {
+    /* font-family: roboto,sans-serif;
+    font-weight: 400;
+    font-style: normal; */
+}
+.main-nav {
+    width: 100%;
+    height: 10rem;
+    padding: 0 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo a {
+font-size: 1.6rem;
+text-decoration: none;
+text-transform: uppercase;
+letter-spacing: 1rem;
+outline: .2rem solid var(--four-clr);
+font-weight: bold;
+}
+.logo a i {
+font-size: 3rem;
+margin-right: 1rem;
 }
