--- a/src/css/siteLanding.css
+++ b/src/css/siteLanding.css
@@ -57,10 +57,61 @@ font-size: 1.6rem;
 text-decoration: none;
 text-transform: uppercase;
 letter-spacing: 1rem;
-outline: .2rem solid var(--four-clr);
+outline: .2rem solid var(--primary-clr);
 font-weight: bold;
+padding: 1rem 2rem;
 }
 .logo a i {
 font-size: 3rem;
 margin-right: 1rem;
+}
+.hamburger-menu {
+    height: 5rem;
+    width: 5rem;
+    background-color: var(--three-clr);
+    border-radius: .6rem;
+    box-shadow: 
+                .5rem .5rem var(--secondary-clr),
+                -.3rem -.5rem 1rem #fff;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hamburger-menu:hover {
+    box-shadow: 
+              inset .5rem .5rem var(--secondary-clr),
+              inset -.3rem -.5rem 1rem #fff;
+}
+.bar {
+    width: 3rem;
+    height: .2rem;
+    background-color: #333;
+    display: inline-block;
+    position: relative;
+}
+.bar::before, 
+.bar::after {
+    content: "";
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    background-color: inherit;
+}
+.bar::before {
+    top: -.8rem;
+}
+.bar::after {
+    top: .8rem;
+}
+.open .bar {
+    background-color: transparent;
+}
+.open .bar::before {
+    top: 0;
+    transform: rotate(135deg);
+}
+.open.bar::after {
+    top: 0;
+    transform: rotate(-135deg);
 }
