--- a/src/css/siteLanding.css
+++ b/src/css/siteLanding.css
@@ -43,6 +43,7 @@ body {
     /* font-family: roboto,sans-serif;
     font-weight: 400;
     font-style: normal; */
+    overflow: hidden;
 }
 .main-nav {
     width: 100%;
@@ -69,7 +70,7 @@ margin-right: 1rem;
     height: 5rem;
     width: 5rem;
     background-color: var(--three-clr);
-    border-radius: .6rem;
+    border-radius: .4rem;
     box-shadow: 
                 .5rem .5rem var(--secondary-clr),
                 -.3rem -.5rem 1rem #fff;
@@ -77,6 +78,7 @@ margin-right: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2000;
 }
 .hamburger-menu:hover {
     box-shadow: 
@@ -89,6 +91,7 @@ margin-right: 1rem;
     background-color: #333;
     display: inline-block;
     position: relative;
+    transition: background-color .3s;
 }
 .bar::before, 
 .bar::after {
@@ -96,7 +99,8 @@ margin-right: 1rem;
     position: absolute;
     width: inherit;
     height: inherit;
-    background-color: inherit;
+    background-color: #333;
+    transition: all .3s;
 }
 .bar::before {
     top: -.8rem;
@@ -105,13 +109,49 @@ margin-right: 1rem;
     top: .8rem;
 }
 .open .bar {
-    background-color: transparent;
+     background-color: transparent; 
 }
 .open .bar::before {
     top: 0;
     transform: rotate(135deg);
 }
-.open.bar::after {
+.open .bar::after {
     top: 0;
     transform: rotate(-135deg);
+}
+.nav-list {
+    width: 50rem;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: var(--four-clr);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: -.5rem 0 1rem rgba(0, 0, 0, .1);
+    z-index: 1500;
+    transform: translateX(55rem);
+    transition: transform .5s;
+}
+.open .nav-list {
+    transform: translateX(0);
+}
+.nav-item {
+    list-style: none;
+    border-bottom: .2rem solid var(--off-clr);
+}
+.nav-link {
+    text-decoration: none;
+    display: block;
+    color: #333;
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: .5rem;
+    transition: color .3s;
+}
+.nav-link:hover {
+    color: var(--off-clr);
 }
