--- a/src/css/siteLanding.css
+++ b/src/css/siteLanding.css
@@ -61,9 +61,10 @@ letter-spacing: 1rem;
 outline: .2rem solid var(--primary-clr);
 font-weight: bold;
 padding: 1rem 2rem;
+color: var(--three-clr);
 }
 .logo a i {
-font-size: 3rem;
+font-size: 2.5rem;
 margin-right: 1rem;
 }
 .hamburger-menu {
@@ -154,4 +155,85 @@ margin-right: 1rem;
 }
 .nav-link:hover {
     color: var(--off-clr);
+}
+
+.hero {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../assets/image4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    position: relative;
+}
+.hero::after {
+    content: "";
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+}
+.hero-clipped {
+    width: 60%;
+    height: inherit;
+    background-color: var(--three-clr);
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    clip-path: polygon(60% 0, 100% 0, 100% 100%, 0% 100%);
+}
+.hero-textbox {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left:60%; 
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1.5;
+    color: var(--secondary-clr);
+    padding: 1rem;
+    z-index: 20;
+}
+.main-heading {
+    font-size: 6rem;
+    font-weight: bold;
+}
+.sub-heading {
+    font-size: 1.6rem;
+    font-weight: 400;
+    letter-spacing: .2rem;
+}
+.cta-btn {
+    display: inline-block;
+    font-size: 1.2rem;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: var(--off-clr);
+    padding: 1rem 4rem;
+    margin-top: 5rem;
+    border-radius: .4rem;
+    box-shadow: .3rem .3rem .1rem rgba(0, 0, 0, .3);
+    position: relative;
+}
+.cta-btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    border-radius: inherit;
+    z-index: -1;
+}
+.cta-btn:hover::after {
+    transform: scaleX(1.2) scaleY(1.6);
+    opacity: 0;
+    transition: all .5s;
 }
