--- a/src/css/siteLanding.css
+++ b/src/css/siteLanding.css
@@ -214,7 +214,7 @@ margin-right: 1rem;
     letter-spacing: .1rem;
     text-decoration: none;
     color: #fff;
-    background-color: var(--off-clr);
+    background-color: var(--secondary-clr);
     padding: 1rem 4rem;
     margin-top: 5rem;
     border-radius: .4rem;
