--- a/src/css/styleLight.css
+++ b/src/css/styleLight.css
@@ -16,12 +16,10 @@
 }
 html {
     font-size: 62.5%;
-    font-family: roboto,sans-serif;
-/*     font-weight: 400;
-    font-style: normal; */
 }
 a {
     text-decoration: none;
+    display: inline-block;
 }
 ul {
     list-style: none;
@@ -31,4 +29,109 @@ img {
     background-size: cover;
     background-position: center;
     object-fit: cover;
+}
+body {
+    font-family: roboto,sans-serif;
+    font-weight: 400;
+    font-style: normal; 
+    color: #ffffff;
+}
+.blurred-wrapper {
+    height: 100vh;
+    background-image: url(../assets/wallpaper.jpg);
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 1;
+    overflow: hidden;
+    animation: hue 10s infinite alternate;
+}
+.blurred-wrapper::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: blur(2rem);
+    transform: scale(1.15);
+}
+@keyframes hue {
+    from {
+    filter: hue-rotate(0);
+    }
+    to {
+    filter: hue-rotate(360deg);
+    }
+}
+
+.main-header {
+    height: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+}
+.logo {
+    font-size: 4rem;
+}
+.btn {
+    padding: 1rem 2.5rem;
+    border: .2rem solid rgba(255, 255, 255, .5);
+    border-radius: 2.5rem;
+}
+.sign-up {
+    color: #ffffff;
+}
+.hero {
+    display: flex;
+    align-items: center;
+    height: calc(100vh - 12rem);
+}
+.content-wrapper {
+    max-width: 40rem;
+    transform: translateY(-4rem);
+}
+.tagline {
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 100;
+    margin-bottom: 1rem;
+}
+.title {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+.message {
+    font-size: 1.4rem;
+    margin-bottom: 3rem;
+}
+
+.cta {
+    background-color: #000;
+    color: #fff;
+}
+@media screen and (min-width: 768px) {
+    .btn {
+        padding: 1.5rem 3rem;
+    }
+    .content-wrapper {
+        max-width: 60rem;
+    }
+    .tagline {
+        font-size: 1.6rem;
+    }
+    .title {
+        font-size: 6rem;
+    }
+    .message {
+        font-size: 2rem;
+    }
 }
