--- a/src2/css/styleAnimate.css
+++ b/src2/css/styleAnimate.css
@@ -58,3 +58,38 @@ header {
 .logo a i {
     font-size: 3rem;
 }
+
+.main-input {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    margin: 0 auto;
+    width: 20rem;
+    height: 3rem;
+    margin-top: 2rem;
+    border-radius: 5rem;
+    border: .1rem solid var(--color-base);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-input input {
+ border-radius: 3rem;
+ border: none;
+ outline: none;
+ width: 15rem;
+ height: 2rem;
+}
+.main-input input::placeholder {
+    text-align: center;
+}
+.search-icon {
+    margin-right: .5rem;
+}
+.micro-icon {
+    margin-left: .5rem;
+}
+
+.nav-list {
+    
+}
