--- a/src2/css/styleAnimate.css
+++ b/src2/css/styleAnimate.css
@@ -26,20 +26,25 @@ img {
     background-position: center;
     object-fit: cover;
 }
-body {
+body.dark nav{
     font-family: roboto,sans-serif;
     font-weight: 400;
     font-style: normal; 
+
+    background: #222222;
+    -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.16);
+            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.16);
 }
-header {
+header{
     width: 100%;
-    height: 10vh;
+    height: 8vh;
     background-color: var(--primary-clr);
 }
-.main-nav {
+.main-nav{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr) 8rem;
     gap: .5rem;
+    height: 8vh;
 }
 .logo {
     grid-column-start: 1;
@@ -66,7 +71,7 @@ header {
     margin: 0 auto;
     width: 20rem;
     height: 3rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     border-radius: 5rem;
     border: .1rem solid var(--color-base);
     display: flex;
@@ -106,4 +111,57 @@ header {
 }
 .nav-item a img {
     border-radius: 5rem;
+}
+
+.nav-buttonn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+}
+.switch {
+    background: #343D5B;
+    border-radius: 10rem;
+    border: none;
+    position: relative;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    outline: none;
+}
+.switch::after {
+ content: "";
+ display: block;
+ width: 3rem;
+ height: 3rem;
+ position: absolute;
+ background: #F1F1F1;
+ top: 0;
+ left: 0;
+ right: unset;
+ border-radius: 10rem;
+transition: .3s ease all;
+-webkit-transition: .3s ease all;
+box-shadow: 0  0 .2rem .2rem rgba(0, 0, 0, 0.2);
+-webkit-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.switch.active {
+    background: orange;
+    color: #000;
+}
+.switch.active::after {
+    right: 0;
+    left: unset;
+}
+.switch span {
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    display: block;
+    background: none;
+    color: var(--color-base);
 }
