--- a/src2/css/styleAnimate.css
+++ b/src2/css/styleAnimate.css
@@ -37,8 +37,12 @@ body.dark nav{
 }
 header{
     width: 100%;
-    height: 8vh;
+    height: 40vh;
     background-color: var(--primary-clr);
+    background-image: url(../assets/img/hero-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-position: center;
 }
 .main-nav{
     display: grid;
@@ -122,6 +126,32 @@ header{
     -webkit-box-align: center;
     -ms-flex-align: center;
 }
+.header-text {
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:5rem;
+}
+.header-text h1 {
+    margin: 0 auto;
+    font-size: 5rem;
+    color: var(--color-base);
+    font-weight: bold;
+}
+.parr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.parr p {
+    font-size: 2rem;
+    color: var(--color-base);
+    margin-top: 1rem;
+}
+
+/* // */
 .switch {
     background: #343D5B;
     border-radius: 10rem;
