--- a/src2/css/styleAnimate.css
+++ b/src2/css/styleAnimate.css
@@ -195,3 +195,72 @@ box-shadow: 0  0 .2rem .2rem rgba(0, 0, 0, 0.2);
     background: none;
     color: var(--color-base);
 }
+
+/* main */
+.main {
+    width: 100%;
+    height: 50vh;
+    display: grid;
+    grid-template-columns: 1fr 20rem;
+    grid-template-rows: repeat(2, 1fr);
+    gap: .5rem;
+    margin-top: 2rem;
+}
+.main-image {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    overflow: hidden;
+}
+.main-image img {
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    object-fit: cover;
+}
+.main-text {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main-text h1{
+  color: var(--color-dark);
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
+.text-parr {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text-parr p {
+    color: var(--color-dark);
+    letter-spacing: .1rem;
+    margin: 0 auto;
+    font-weight: 400;
+    text-align: center;
+}
+/* // */
+.grid {
+    width: 100%;
+    height: 50vh;
+    margin-top: 2rem;
+}
+
+/* //footer */
+footer {
+    width: 100%;
+    height: 10vh;
+    background-color: var(--primary-clr);
+}
