--- a/src2/css/styleAnimate.css
+++ b/src2/css/styleAnimate.css
@@ -252,15 +252,55 @@ box-shadow: 0  0 .2rem .2rem rgba(0, 0, 0, 0.2);
     text-align: center;
 }
 /* // */
-.grid {
+.container {
     width: 100%;
     height: 50vh;
     margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+     grid-template-rows: repeat(2, 1fr);
+    gap: .5rem;
+}
+.container > div {
+    /* background-image: url(../assets/img/image2.jpg); */
+    background-size: cover;
+    background-attachment: fixed;
+    height: 20.1rem;
+}
+.container > div:nth-of-type(1) {
+ grid-column: 1 / 3;
+}
+.container > div:nth-of-type(2) {
+    grid-column: 3 / 5;
+}
+.container > div:nth-of-type(3) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+}
+.container > div:nth-of-type(4) {
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+}
+.bg1 {
+    background-image: url(../assets/img/image1.jpg);
+    color: #fff;
+}
+.bg2 {
+    background-image: url(../assets/img/aud1.jpg);
+    color: #fff;
+}
+.bg3 {
+    background-image: url(../assets/img/image1.jpg);
+    color: #fff;
+}
+.bg4 {
+    background-image: url(../assets/img/aud1.jpg);
+    color: #fff;
 }
 
 /* //footer */
-footer {
+/* footer {
     width: 100%;
     height: 10vh;
     background-color: var(--primary-clr);
-}
+} */
