--- a/src2/css/styleAnimate.css
+++ b/src2/css/styleAnimate.css
@@ -26,6 +26,10 @@ img {
     background-position: center;
     object-fit: cover;
 }
+body {
+    width: 100%;
+    height: 100vh;
+}
 body.dark nav{
     font-family: roboto,sans-serif;
     font-weight: 400;
@@ -260,12 +264,37 @@ box-shadow: 0  0 .2rem .2rem rgba(0, 0, 0, 0.2);
     grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(2, 1fr);
     gap: .5rem;
+    background-color: var(--primary-clr);
 }
 .container > div {
     /* background-image: url(../assets/img/image2.jpg); */
     background-size: cover;
     background-attachment: fixed;
-    height: 20.1rem;
+   /*  height: 20.1rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.3s ease-in;
+    flex-wrap: wrap;
+}
+.container > div:hover {
+    opacity: 0.7;
+    transform: scale(0.98);
+}
+h2 {
+    font-size: 2rem;
+    color: #fff;
+    margin: 1rem;
+    font-weight: bold;
+}
+h2 span {
+    font-size: 2.5rem;
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
 }
 .container > div:nth-of-type(1) {
  grid-column: 1 / 3;
@@ -283,24 +312,36 @@ box-shadow: 0  0 .2rem .2rem rgba(0, 0, 0, 0.2);
 }
 .bg1 {
     background-image: url(../assets/img/image1.jpg);
-    color: #fff;
+    
 }
 .bg2 {
     background-image: url(../assets/img/aud1.jpg);
-    color: #fff;
+    
 }
 .bg3 {
     background-image: url(../assets/img/image1.jpg);
-    color: #fff;
+    
 }
 .bg4 {
     background-image: url(../assets/img/aud1.jpg);
-    color: #fff;
+    
 }
 
 /* //footer */
-/* footer {
+ footer {
     width: 100%;
     height: 10vh;
     background-color: var(--primary-clr);
-} */
+    margin-top: 2rem;
+} 
+footer p {
+    text-align: center;
+    color: #fff;
+    font-size: 2rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    margin: 0 auto;
+}
